--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -1,11 +1,12 @@
 name: License Compliance
 
 on:
-    push:
-        branches: [ main ]
-    pull_request:
-        types: [ opened, reopened, synchronize ]
-    workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  schedule:
+    - cron: '0 2 * * *'  # Run daily at 2 AM UTC
 
 permissions:
     contents: read
