--- a/.github/workflows/security-codeql.yml
+++ b/.github/workflows/security-codeql.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '43 20 * * 6'  # Every Saturday 8:43 PM UTC
+    - cron: '0 2 * * *'  # Run daily at 2 AM UTC
 
 permissions:
   security-events: write
