--- a/.github/workflows/security-trivy.yml
+++ b/.github/workflows/security-trivy.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Harden the runner (Audit all outbound calls)
-        uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
+        uses: step-security/harden-runner@v2.11.1     # v2.11.1
         with:
           egress-policy: audit
 
@@ -27,16 +27,16 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y jq
 
       - name: Checkout repository
-        uses: actions/checkout@<SHA_FOR_V4_1_0>
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@<SHA_FOR_V2_9_1>
+        uses: docker/setup-buildx-action@v2
 
       - name: Build Docker image with commit SHA tag
         run: docker build -t ledgerbase:${{ github.sha }} .
 
       - name: Run Trivy with SARIF output
-        uses: aquasecurity/trivy-action@<SHA_FOR_V0_11_2>
+        uses: aquasecurity/trivy-action@v2
         with:
           image-ref: ledgerbase:${{ github.sha }}
           format: sarif
@@ -46,16 +46,13 @@ jobs:
           severity: 'HIGH,CRITICAL'
 
       - name: Also generate JSON report for review
-        run: |
-          docker run --rm \
-            -v /var/run/docker.sock:/var/run/docker.sock \
-            aquasec/trivy:latest \
-            image \
-            --format json \
-            --output trivy-results.json \
-            --severity HIGH,CRITICAL \
-            --ignore-unfixed \
-            ledgerbase:${{ github.sha }}
+        uses: aquasecurity/trivy-action@v2
+        with:
+          image-ref: ledgerbase:${{ github.sha }}
+          format: json
+          output: trivy-results.json
+          ignore-unfixed: true
+          severity: HIGH,CRITICAL
 
       - name: Check if SARIF file was created
         run: |
@@ -74,18 +71,22 @@ jobs:
       - name: Count HIGH/CRITICAL issues in SARIF
         id: count
         run: |
-          count=$(jq '[.runs[].results[] | select(.level == "error" or .level == "warning")] | length' trivy-results.sarif)
+          count=$(jq '[.runs[].results[] | select(.level == "error" or .level == "warning")] | length' trivy-results.sarif || echo "0")
+          if [ -z "$count" ]; then
+           echo "::error::Failed to parse SARIF file. Ensure it is correctly formatted."
+            exit 1
+          fi
           echo "Total HIGH/CRITICAL issues: $count"
           echo "vulns=$count" >> $GITHUB_OUTPUT
 
       - name: Upload SARIF to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@<SHA_FOR_V3_24_9>
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: trivy-results.sarif
 
       - name: Upload JSON artifact
         if: always()
-        uses: actions/upload-artifact@<SHA_FOR_V4>
+        uses: actions/upload-artifact@v4
         with:
           name: trivy-json
           path: trivy-results.json
@@ -98,7 +99,7 @@ jobs:
 
       - name: Label PR if Trivy issues found
         if: github.event_name == 'pull_request' && steps.count.outputs.vulns != '0'
-        uses: actions/github-script@<SHA_FOR_V7_1_0>
+        uses: actions/github-script@v7
         with:
           script: |
             const label = 'security:trivy';
@@ -113,3 +114,8 @@ jobs:
               issue_number: pr.number,
               labels: [label],
             });
+
+      - name: Cleanup temporary files
+        if: always()
+        run: |
+          rm -f trivy-results.sarif trivy-results.json
