--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -1,65 +1,61 @@
-name: SBOM (CycloneDX)
+name: Security - SBOM
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
   schedule:
-    - cron: '0 2 * * *'  # Run daily at 2 AM UTC
+    - cron: '0 3 * * *'  # Run daily at 3 AM UTC
+  workflow_dispatch:
 
 permissions:
-    contents: read
-    security-events: write     # for SARIF upload to Security tab
-    actions: read
+  contents: read
+  security-events: write
 
 jobs:
-    sbom:
-        uses: .github/workflows/templates/nox-template-matrix.yml
+  sbom:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Harden the runner (Audit all outbound calls)
+        uses: step-security/harden-runner@v2.11.1
         with:
-            session: "sbom"
+          egress-policy: audit
 
-    upload-sarif:
-        name: Upload SARIF to GitHub Security tab
-        needs: sbom
-        runs-on: ubuntu-latest
-        if: always()
+      - name: Cache Trivy DB
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/trivy
+          key: trivy-db-${{ runner.os }}-${{ hashFiles('**/Dockerfile') }}
+          restore-keys: |
+            trivy-db-${{ runner.os }}-
 
-        steps:
-            - name: Harden the runner (Audit all outbound calls)
-              uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
-              with:
-                egress-policy: audit
+      - name: Install Trivy
+        run: |
+          sudo apt-get update && sudo apt-get install -y wget
+          wget -qO trivy.tar.gz https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.52.1_Linux-64bit.tar.gz
+          tar -xf trivy.tar.gz
+          sudo mv trivy /usr/local/bin/
 
-            -   name: Checkout code
-                uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Build Docker image for SBOM generation
+        run: docker build -t ledgerbase:${{ github.sha }} .
 
-            -   name: Download SARIF from runner
-                run: |
-                    if [ ! -f sbom.sarif ]; then echo "Missing SARIF file"; exit 1; fi
+      - name: Generate SBOM (CycloneDX format)
+        run: |
+          trivy image ledgerbase:${{ github.sha }} \
+            --format cyclonedx \
+            --output sbom.cdx.json
 
-            -   name: Upload SARIF to GitHub Security tab
-                uses: github/codeql-action/upload-sarif@45775bd8235c68ba998cffa5171334d58593da47 # v3.28.15
-                with:
-                    sarif_file: sbom.sarif
+      - name: Validate CycloneDX SBOM
+        run: |
+          wget -q https://github.com/CycloneDX/cyclonedx-cli/releases/download/v0.24.0/cyclonedx-linux-x64 -O cyclonedx
+          chmod +x cyclonedx
+          ./cyclonedx validate --input-file sbom.cdx.json
 
-    upload-json:
-        name: Archive CycloneDX JSON
-        needs: sbom
-        runs-on: ubuntu-latest
-        if: always()
-
-        steps:
-            - name: Harden the runner (Audit all outbound calls)
-              uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
-              with:
-                egress-policy: audit
-
-            -   name: Checkout code
-                uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-            -   name: Upload CycloneDX JSON artifact
-                uses: actions/upload-artifact@ff15f0306b3f739f7b6fd43fb5d26cd321bd4de5 # v3.2.1
-                with:
-                    name: sbom-cyclonedx-json
-                    path: sbom.json
+      - name: Upload SBOM as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom-cyclonedx
+          path: sbom.cdx.json
