--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ target-version = "py311"
 line-length = 88
 fix = true
 show-fixes = true
+extend-ignore = ["E265"]
 
 [tool.ruff.format]
 quote-style = "double"
@@ -64,6 +65,9 @@ ignore = [
   "D107",  # Missing docstring in __init__
   "ANN101",  # Missing type annotation for self in method
   "T201",  # print() used
+  "D203",  # 1 blank line required before class docstring
+  "D213",  #Multi-line docstring summary should start at the second line
+  "D205",  # Docstring under triple quotes shouldbe on the same line
 ]
 exclude = [
   ".git",
